edit script documentation

--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@
 
                         <p>1. Sounds are organized into three families based on the general area where they are
                             pronounced
-                            in the mouth (Y axis in the table below).</p>
+                            in the mouth (see rows in the table below).</p>
                         <p>2. Within the families, sounds are organized into groups based on three factors of
-                            similarity (X axis in the table below):</p>
+                            similarity (see columns in the table below):</p>
                         <ul>
                             <li>Unvoiced and voiced variation on the same sound (e.g. t/d)</li>
                             <li>Related pronunciation (e.g. both t/d pair and θ/đ pair are pronounced with the tip of
@@ -285,20 +285,29 @@
                             </table>
                         </div>
 
+                        <p>This way of organizing our consonants will be reflected in how we write them. Instead of
+                            having 29 random glyphs, we'll have : </p>
+
+                        <ul>
+                            <li>three families of glyphs (lips consonants, ridge consonants, and
+                                back consonants)…</li>
+                            <li>made up of twelve unique letters (the twelve rows)…</li>
+                            <li>with a maximum of six variations of each letter (the six columns).</li>
+                        </ul>
+
+                        <p>Let's see how this plays out graphically.</p>
 
                         <h3 id="writing-consonants">writing consonants</h3>
 
-                        <p>Each consonant follows one of three shape patterns (Y axis on the chart below), depending on
-                            whether the letter has a stem and where the stem is placed. These three “families” indicate
-                            approximately where a letter is pronounced in the mouth (see Y axis on “consonant sounds”
-                            chart above).</p>
+                        <p> Each consonant follows one of three shape patterns that
+                            correspond to one of the three pronunciation families on the consonant sounds chart above.
+                            In other words, a consonant letter's general shape — specifically, if it has a stem and
+                            where the stem is located — indicates approximately where a letter is pronounced in the
+                            mouth (see rows on the chart below).</p>
 
-                        <p>I write 29 consonant sounds with only twelve letters. This is because
-                            similar sounds are grouped (see X axis on “consonant sounds” chart above), and each group is
-                            written
-                            with
-                            a single letter. Diacritics are then used to distinguish sounds in the group (X axis on the
-                            chart below).</p>
+                        <p>I write 29 consonant sounds with only twelve letters, one letter for each row of the
+                            consonant sounds chart above. Diacritics are then used to distinguish sounds in the group
+                            (see columns on the chart below).</p>
 
                         <div class="large-table simple-script">
                             <table class="tg">
@@ -366,6 +375,8 @@
                             counterpart (<code>m</code>, <code>w</code>, <code>n</code>, <code>l</code>, <code>r</code>,
                             <code>ŋ</code>).
                         </p>
+
+                        <p>Here's what that looks like:</p>
 
                         <div class="large-table script">
                             <table class="tg">
