add vowel spelling to script

--- a/index.html
+++ b/index.html
@@ -575,23 +575,6 @@
                             </table>
 
                         </div>
-                        <p>In semitic languages like Hebrew and Arabic, in which vowels are also written as diacritics,
-                            they are often omitted from writing altogether with no impact on reader comprehension. We
-                            can't do this in English because our language is not built around syllables in the same way
-                            that semitic languages are. </p>
-
-                        <p>That said, I do find that as I become more familiar with this
-                            script, I learn to omit a great deal of vowels without the text becoming ambiguous. This
-                            makes writing more efficient.</p>
-
-                        <p>In the same way, some consonant diacritics can be discarded as well.</p>
-
-                        <p><strong>Example:</strong></p>
-                        <p>Take the article “the”. It is often sufficient to simply write it as
-                            the letter <code><span class="script">t</span></code>, omitting both the top diacritic
-                            indicating that it is specifically a <code>đ</code> consonant sound, as well as the bottom
-                            diacritic indicating that it is followed by a short <code>u</code> vowel sound
-                            (approximately). “I took <code><span class="script">t</span></code> train” just works.</p>
 
                         <h2 id="cursive">cursive manuscript</h2>
 
@@ -675,14 +658,16 @@
                             flexibility here. For
                             example, I often find that I like to use the middle form of letters in the
                             <code><span class="script">t</span></code> family at the beginning of one-syllable words
-                            (see visual examples below).
+                            (see examples in next section).
                         </p>
 
                         <h3>connecting words</h3>
 
                         <p>Words aren't always written from left to right with spaces in between; they can
-                            succeed one another in other ways as well. Despite this flexibility, words
-                            and word order remains clear thanks to the two following constants:</p>
+                            succeed one another in other ways as well.</p>
+
+                        <!-- <p>Despite this flexibility, words
+                                and word order remains clear thanks to the two following constants:</p>
                         <ul>
                             <li>Words never connect to one another in a cursive manner, meaning that the first letter of
                                 a word will never be written with the same pen stroke as the last letter of the
@@ -691,9 +676,9 @@
                                 always appear further left than the first letter of the subsequent word.</li>
                         </ul>
 
-                        <p><strong>Some examples:</strong></p>
+                        <p><strong>Some examples:</strong></p> -->
 
-                        <p>The most obvious way to write the words “the pen” would be in the following way:
+                        <p>For example, the most obvious way to write the words “the pen” would be in the following way:
                         </p>
 
                         <p style="text-align: center;">
@@ -708,40 +693,159 @@
 
                         <p>In addition to choosing the middle form of the letter
                             <code><span class="script">t</span></code>, I have also extended the tail of this letter in
-                            a way that causes the second word to “sit” on the first. This is the most common way in
-                            which words overlap on the horizontal axis, and it can be briefly explained in three points.
+                            a way that causes the second word to “sit” on the first.
                         </p>
+
+                        <p>We could also write the words “this pen” like this:</p>
+
+                        <p style="text-align: center;">
+                            <img class="script-scan" src="assets/images/script/this-pen.svg" alt="">
+                        </p>
+
+                        <p>We can briefly explain how words overlap like this in three points:</p>
 
                         <ul>
                             <li>
                                 A word can sit on a horizontal stroke belonging to a previous word if that horizontal
                                 stroke is at the writing line.
                             </li>
-                            <li>The two words remain distinct in that aren't connected with a cursive stroke.
+                            <li>The two words remain distinct in that aren't connected with a continuous cursive stroke.
                             </li>
                             <li>Word order remains discernible in that the first letter of the first word precedes the
                                 first letter of the second word.</li>
                         </ul>
 
                         <p>As long as word order remains clear thanks to these constants, there's room for quite a bit
-                            of flexibility. For example, in the phrase below, “the nib of the pen”, the article “the” is
-                            written in two different ways, for no other reason that this just seemed to fit:</p>
+                            of flexibility.</p>
+
+                        <!-- <p>For example, in the phrase below, “the nib of the pen”, the article “the” is
+                                written in two different ways, for no other reason that this just seemed to fit:</p>
 
                         <p style="text-align: center;">
                             <img class="script-scan" src="assets/images/script/the-nib-of-the-pen.svg" alt="">
+                        </p> -->
+
+                        <h2 id="spelling">spelling</h2>
+
+                        <h3>vowels</h3>
+
+                        <p>An advantage to using diacritics for vowels is that you can omit them when they’re not
+                            strictly necessary without changing the overall look of a word. Vowels are, in fact,
+                            optional.
                         </p>
+
+                        <p>Now, unlike in semitic languages, for example, we can't omit vowel information entirely and
+                            expect English to remain intelligible. Still, a good number of vowels can in fact
+                            be left out.</p>
+
+                        <p>To demonstrate, take the consonants below:</p>
+
+                        <p style="text-align: center;">
+                            <img class="script-scan" src="assets/images/script-examples/with-images-0.svg" alt="">
+                        </p>
+
+                        <p>Without vowels, this spells out “W’TH ’M’J’S ’N’T T’P’L’J”, which is not very readable, apart
+                            perhaps from the first word “with”.</p>
+
+                        <p>First, we can use a tie (like a tie in music) to
+                            indicate when two consonants follow directly, with no vowel between them:</p>
+
+                        <p style="text-align: center;">
+                            <img class="script-scan" src="assets/images/script-examples/with-images-1.svg" alt="">
+                        </p>
+
+                        <p>In reality, such a tie is unnecessary here because the letters
+                            <code><span class="script">Hnt</span></code> (and even
+                            <code><span class="script">hnt</span></code>) are always the word “and” unless otherwise
+                            specified. Frequent words like this need very little information.
+                        </p>
+                        </p>
+
+                        <p>Without vowels, the second and fourth words are tougher. So we start by writing
+                            in any vowels that are in stressed syllables:
+                        </p>
+
+                        <p style="text-align: center;">
+                            <img class="script-scan" src="assets/images/script-examples/with-images-2.svg" alt="">
+                        </p>
+
+                        <p>This gives us “WITH <span class="underlined">I</span>M’J’S AND T’P<span
+                                class="underlined">O</span>L’J” (stressed
+                            vowels underlined). The
+                            second word is now
+                            clearly “images”.</p>
+
+                        <p>It turns out the final word ends in a vowel, but this isn’t obvious. It’s generally good to
+                            write final vowels. Since this word ends in a long-e sound, and because long-e endings are
+                            so frequent, they’ve developed their own easy ending: a lengthened letter tail and a long
+                            parallel line placed beneath it.</p>
+
+                        <p style="text-align: center;">
+                            <img class="script-scan" src="assets/images/script-examples/with-images-3.svg" alt="">
+                        </p>
+
+                        <p>The vertical mark placed under the <code><span class="script">p</span></code> in the last
+                            word can be
+                            useful to specify
+                            which of
+                            several marked vowels is emphasized.</p>
+
+                        <p>This gives us “WITH <span class="underlined">I</span>MAGES AND T’P<span
+                                class="underlined">O</span>L’JEE”. The last word could be “typology” but it could
+                            also be “topology”. In the majority of cases, context makes choices like this obvious.
+                            Still, when
+                            an uncommon word appears for the first time in a text, it's a good idea to write
+                            more vowels.</p>
+
+                        <p>In the end, we might end up with something like this:</p>
+
+
+                        <p style="text-align: center;">
+                            <img class="script-scan" src="assets/images/script-examples/with-images-4.svg" alt="">
+                        </p>
+
+                        <p>To summarize these rules of thumb:</p>
+
+                        <ul>
+                            <li>Very common small words (especially conjunctions and the like) barely need any
+                                information. When
+                                less common words share the same consonant letters, additional markings should make the
+                                difference clear (e.g. “and” vs. “ant” vs. “end”).</li>
+                            <li>Ties can be used to link two consonants. Series of three consonants are linked with an
+                                upside-down
+                                tie (see sample text below).</li>
+                            <li>Vowels should be placed under stressed syllables of words that aren’t immediately
+                                obvious without them.</li>
+                            <li>Final vowels should generally be written. Final long-e sounds are written with a long
+                                diacritic stroke and a long letter tail for consonants that can have one. When the tail
+                                is present, the diacritic is optional (see sample text below).</li>
+                            <li>When several vowels are provided in a word, the emphasized vowel can be marked.</li>
+                            <li>Vowels and other markings can of course be discarded after the initial occurrence of a
+                                frequent word in a given body of text.</li>
+                        </ul>
+
+                        <p>See next section for a larger sample size of text written in this way.</p>
+
+                        <!-- 
+                        <p><strong>Example:</strong></p>
+                        <p>Take the article “the”. It is often sufficient to simply write it as
+                            the letter <code><span class="script">t</span></code>, omitting both the top diacritic
+                            indicating that it is specifically a <code>đ</code> consonant sound, as well as the bottom
+                            diacritic indicating that it is followed by a short <code>u</code> vowel sound
+                            (approximately). “I took <code><span class="script">t</span></code> train” just works.</p> -->
 
                         <h2 id="samples">sample text</h2>
 
                         Transcription below.
 
-                        <img src="assets/images/scipt-samples/asterix-in-corsica.jpeg" class="img-transparent" alt="">
+                        <img src="assets/images/script-examples/asterix.svg" class="img-transparent" alt="">
 
                         <p>Title: “Asterix in Corsica”</p>
 
                         <p>
                             “For most people, Corsica is the homeland of an emperor who has left
-                            pages in history as indelible as those inspired by our old friend Julius Caesar. It is the
+                            pages in history as indelible as those inspired by our old friend Julius Caesar. It is
+                            the
                             country of vendettas, siestas, complicated
                             political games, strong cheese, wild pigs, chestnuts, succulent blackbirds and
                             spry old men watching the world go by…”
@@ -749,11 +853,12 @@
 
                         <h2 id="fonts">fonts</h2>
 
-                        <p>As much as I'd like to make one, there currently is no cursive font for this script. However,
+                        <p>As much as I'd like to make one, there currently is no cursive font for this script.
+                            However,
                             there is a bare bones, somewhat
-                            rough-around-the-edges print font which I made for the purpose of documentation, and
+                            rough-around-the-edges print font which I made for the purpose of documentation alone, and
                             which can be downloaded from the <a href="https://github.com/picturamundi/manuscript">github
-                                repository</a>. This fond only includes consonants.</p>
+                                repository</a>. This font only includes consonants.</p>
 
                         <p>The chart below summarizes how inputs are mapped:</p>
 
@@ -1097,10 +1202,11 @@ A story note contains wikilinks such as [[this one]]. Links refer to various not
                         <div id="back"><a href="#home">&lt;&lt;&lt;&lt;----------- back</a></div>
                     </section>
                     <section>
-                        <h2><a onclick="scrollToTop()">outline</a></h2>
+                        <h2><a onclick="scrollToTop()">contents</a></h2>
                         <p><a onclick="scrollToHeading('consonants')">consonants</a></p>
                         <p><a onclick="scrollToHeading('vowels')">vowels</a></p>
                         <p><a onclick="scrollToHeading('cursive')">cursive</a></p>
+                        <p><a onclick="scrollToHeading('spelling')">spelling</a></p>
                         <p><a onclick="scrollToHeading('samples')">samples</a></p>
                         <p><a onclick="scrollToHeading('fonts')">fonts</a></p>
                     </section>
@@ -1130,7 +1236,7 @@ A story note contains wikilinks such as [[this one]]. Links refer to various not
                         <div id="back"><a href="#home">&lt;&lt;&lt;&lt;----------- back</a></div>
                     </section>
                     <section>
-                        <h2><a onclick="scrollToTop()">outline</a></h2>
+                        <h2><a onclick="scrollToTop()">contents</a></h2>
                         <p><a onclick="scrollToHeading('notes')">personal notes</a></p>
                         <p><a onclick="scrollToHeading('software')">software</a></p>
                     </section>
