add IPA to vowel chart

--- a/index.html
+++ b/index.html
@@ -517,6 +517,9 @@
                             consonant sounds, are organized into families (Y axis) so that we don't have to write 15
                             unique glyphs.</p>
 
+                        <p>Since vowel pronunciation is so heavily influenced by dialect and accent, I have provided
+                            example words alongside of IPA. The latter is only accurate for my accent.</p>
+
                         <div class="large-table vowels">
                             <table class="tg">
                                 <thead>
@@ -531,45 +534,54 @@
                                 <tbody>
                                     <tr>
                                         <td class="tg-0pky">a</td>
-                                        <td class="tg-0pky">nap <img src="assets/images/script/a.svg" alt=""></td>
-                                        <td class="tg-0pky">cape <img src="assets/images/script/a-l.svg" alt=""></td>
+                                        <td class="tg-0pky">nap (æ)<img src="assets/images/script/a.svg" alt=""></td>
+                                        <td class="tg-0pky">cape (eɪ) <img src="assets/images/script/a-l.svg" alt="">
+                                        </td>
                                         <td class="tg-0lax"></td>
-                                        <td class="tg-0pky">aha! <img src="assets/images/script/a-o.svg" alt=""></td>
+                                        <td class="tg-0pky">aha! (ɑ) <img src="assets/images/script/a-o.svg" alt="">
+                                        </td>
                                     </tr>
                                     <tr>
                                         <td class="tg-0pky">e</td>
-                                        <td class="tg-0pky">pen <img src="assets/images/script/e.svg" alt=""></td>
-                                        <td class="tg-0pky">greek <img src="assets/images/script/e-l.svg" alt=""></td>
+                                        <td class="tg-0pky">pen (ɛ)<img src="assets/images/script/e.svg" alt=""></td>
+                                        <td class="tg-0pky">peek (i)<img src="assets/images/script/e-l.svg" alt="">
+                                        </td>
                                         <td class="tg-0lax"></td>
                                         <td class="tg-0lax"></td>
                                     </tr>
                                     <tr>
                                         <td class="tg-0pky">i</td>
-                                        <td class="tg-0pky">nib <img src="assets/images/script/i.svg" alt=""></td>
-                                        <td class="tg-0pky">tide <img src="assets/images/script/i-l.svg" alt=""></td>
+                                        <td class="tg-0pky">nib (ɪ)<img src="assets/images/script/i.svg" alt=""></td>
+                                        <td class="tg-0pky">tide (aɪ)<img src="assets/images/script/i-l.svg" alt="">
+                                        </td>
                                         <td class="tg-0lax"></td>
                                         <td class="tg-0lax"></td>
                                     </tr>
                                     <tr>
                                         <td class="tg-0pky">o</td>
-                                        <td class="tg-0pky">hot <img src="assets/images/script/o.svg" alt=""></td>
-                                        <td class="tg-0pky">hope <img src="assets/images/script/o-l.svg" alt=""></td>
-                                        <td class="tg-0pky">loud <img src="assets/images/script/o-d.svg" alt=""></td>
-                                        <td class="tg-0pky">raw <img src="assets/images/script/o-o.svg" alt=""></td>
+                                        <td class="tg-0pky">hot (ɑ)<img src="assets/images/script/o.svg" alt=""></td>
+                                        <td class="tg-0pky">note (oʊ)<img src="assets/images/script/o-l.svg" alt="">
+                                        </td>
+                                        <td class="tg-0pky">loud (aʊ)<img src="assets/images/script/o-d.svg" alt="">
+                                        </td>
+                                        <td class="tg-0pky">raw (ɔ)<img src="assets/images/script/o-o.svg" alt=""></td>
                                     </tr>
                                     <tr>
                                         <td class="tg-0pky">u</td>
-                                        <td class="tg-0pky">mud <img src="assets/images/script/u.svg" alt=""></td>
-                                        <td class="tg-0pky">muse <img src="assets/images/script/u-l.svg" alt=""></td>
+                                        <td class="tg-0pky">mud (ʌ)<img src="assets/images/script/u.svg" alt=""></td>
+                                        <td class="tg-0pky">muse (ju)<img src="assets/images/script/u-l.svg" alt="">
+                                        </td>
                                         <td class="tg-0lax"></td>
                                         <td class="tg-0lax"></td>
                                     </tr>
                                     <tr>
                                         <td class="tg-0lax">oo</td>
-                                        <td class="tg-0pky">room <img src="assets/images/script/oo.svg" alt=""></td>
+                                        <td class="tg-0pky">room (u)<img src="assets/images/script/oo.svg" alt="">
+                                        </td>
                                         <td class="tg-0lax"></td>
                                         <td class="tg-0lax"></td>
-                                        <td class="tg-0pky">book <img src="assets/images/script/oo-o.svg" alt=""></td>
+                                        <td class="tg-0pky">book (ʊ)<img src="assets/images/script/oo-o.svg" alt="">
+                                        </td>
                                     </tr>
                                 </tbody>
                             </table>
