--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
                             consonant sounds, are organized into families (Y axis) so that we don't have to write 15
                             unique glyphs.</p>
 
-                        <p>Since vowel pronunciation is so heavily influenced by dialect and accent, I have provided
+                        <p>Since vowel pronunciation is so heavily influenced by dialect, I have provided
                             example words alongside of IPA. The latter is only accurate for my accent.</p>
 
                         <div class="large-table vowels">
