--- a/index.html
+++ b/index.html
@@ -787,7 +787,8 @@
                             second word is now
                             clearly “images”.</p>
 
-                        <p>It turns out the final word ends in a vowel, but this isn’t obvious. It’s generally good to
+                        <p>It turns out that the final word ends in a vowel, but this isn’t obvious. It’s generally good
+                            to
                             write final vowels. Since this word ends in a long-e sound, and because long-e endings are
                             so frequent, they’ve developed their own easy ending: a lengthened letter tail and a long
                             parallel line placed beneath it.</p>
@@ -829,8 +830,7 @@
                             <li>Vowels should be placed under stressed syllables of words that aren’t immediately
                                 obvious without them.</li>
                             <li>Final vowels should generally be written. Final long-e sounds are written with a long
-                                diacritic stroke and a long letter tail for consonants that can have one. When the tail
-                                is present, the diacritic is optional (see sample text below).</li>
+                                diacritic stroke and a long letter tail for consonants that can have one.</li>
                             <li>When several vowels are provided in a word, the emphasized vowel can be marked.</li>
                             <li>Vowels and other markings can of course be discarded after the initial occurrence of a
                                 frequent word in a given body of text.</li>
